Hiding y overflows on timeline plot. (! y plots still have yet to be fixed...)

--- a/media/css/site.css
+++ b/media/css/site.css
@@ -442,6 +442,7 @@
 .timeline {
     width: 100%;
     overflow-x: scroll;
+    overflow-y: hidden;
     white-space: nowrap;
 }
 
